--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "eslint-plugin-unused-imports": "^2.0.0"
   }
 }
