--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "flowbite-react": "^0.8.0",
+    "jotai": "^2.10.0",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18"
@@ -26,11 +27,11 @@
     "eslint-config-next": "14.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "eslint-plugin-unused-imports": "^2.0.0"
+    "typescript": "^5"
   }
 }
