--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "flowbite-react": "^0.10.2",
     "jotai": "^2.10.0",
-    "next": "14.2.10",
+    "lucide-react": "^0.447.0",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18"
   },
