--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
