--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.10.2",
     "jotai": "^2.10.0",
     "lucide-react": "^0.447.0",
+    "lz-string": "^1.5.0",
     "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
