--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,35 @@
 {
+  "plugins": [
+    "unused-imports",
+    "@typescript-eslint",
+    "prettier",
+    "simple-import-sort",
+    "jsx-a11y"
+  ],
   "extends": [
     "next/core-web-vitals",
     "plugin:tailwindcss/recommended",
-    "prettier"
+    "prettier",
+    "plugin:@typescript-eslint/recommended",
+    "eslint:recommended",
+    "plugin:react/recommended"
   ],
   "settings": {
     "tailwindcss": {
-      "callees": ["twMerge", "createTheme"],
+      "callees": [
+        "twMerge",
+        "createTheme"
+      ],
       "classRegex": "^(class(Name)|theme)?$"
     }
+  },
+  "rules": {
+    "prettier/prettier": "warn",
+    "unused-imports/no-unused-imports": "warn",
+    "simple-import-sort/imports": "warn",
+    "simple-import-sort/exports": "warn",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/self-closing-comp": "warn"
   }
 }
