--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
     "fix": "eslint --fix . --ext .ts,.tsx,.js,.jsx"
   },
   "dependencies": {
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
     "flowbite-react": "^0.10.2",
     "jotai": "^2.10.0",
     "lucide-react": "^0.447.0",
     "lz-string": "^1.5.0",
+    "mongodb": "^6.9.0",
     "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
@@ -32,7 +30,10 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8",
