--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
     "react/self-closing-comp": "warn",
-    "no-undef": "off"
+    "no-undef": "off",
+    "@typescript-eslint/no-require-imports": "off"
   }
 }
