--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "fix": "eslint --fix . --ext .ts,.tsx,.js,.jsx",
+    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-pattern '.next'",
+    "fix": "eslint --fix . --ext .ts,.tsx,.js,.jsx --ignore-pattern .next",
     "prepare": "husky"
   },
   "dependencies": {
@@ -19,9 +19,10 @@
     "lucide-react": "^0.447.0",
     "lz-string": "^1.5.0",
     "mongodb": "^6.9.0",
-    "next": "^14.2.14",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "type-fest": "^4.26.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
