--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "flowbite-react": "^0.10.2",
     "jotai": "^2.10.0",
     "lucide-react": "^0.447.0",
     "lz-string": "^1.5.0",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.7.2",
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "@cspell/eslint-plugin": "^8.15.3",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
