--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
     "flowbite-react": "^0.10.2",
     "jotai": "^2.10.0",
     "lucide-react": "^0.447.0",
@@ -24,13 +22,14 @@
     "mongoose": "^8.7.2",
     "next": "^14.2.15",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-use": "^17.5.1",
     "type-fest": "^4.26.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cspell/eslint-plugin": "^8.15.3",
-    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
