--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
     "jotai": "^2.10.0",
@@ -26,6 +27,7 @@
     "react-dom": "^18",
     "react-use": "^17.5.1",
     "type-fest": "^4.26.1",
+    "wheel-of-react": "^1.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
