--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
+    "graphql": "^16.9.0",
     "jotai": "^2.10.0",
     "lucide-react": "^0.447.0",
     "lz-string": "^1.5.0",
