--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "@slack/web-api": "^7.7.0",
     "cookie": "^1.0.1",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
