--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "^15.0.1",
+    "node-polyfill-webpack-plugin": "^4.0.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-cookie": "^7.2.2",
