--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,7 @@
     "react/react-in-jsx-scope": "off",
     "react/self-closing-comp": "warn",
     "no-undef": "off",
-    "@typescript-eslint/no-require-imports": "off"
+    "@typescript-eslint/no-require-imports": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
