deps: downgrade react to ^v18

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,8 @@ updates:
     ignore:
       - dependency-name: eslint
         versions: ["9"]
+      - dependency-name: react
+        versions: ["19"]
     groups:
       deps:
         dependency-type: "production"
